[package]
name = "aquiver"
version = "0.1.0"
authors = ["CAIMEOX <1853884864@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "*"
clap = "*"
image = "*"
indicatif = "0.14.0"
uuid = { version = "0.8", features = ["serde", "v4"] }